--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
+  font-family:"Roboto","Helvetica","Arial",sans-serif;
+}
+
+
+.Header {
+  /* background-color: #282c34; */
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  justify-content: center;
+  font-size: 3rem;
+  height: 10rem;
+  border: 1px solid lightgray;
+  /* color: white; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Body{
+  display: flex;
+  flex-direction: row;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.GalleryItems{
+  display: flex;
+  flex-direction: column;
+  min-width: 75vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Filter{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-width: 25vw;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .Filter p{
+  margin:0;
+} */
