--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,11 @@
 .Filter{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items:flex-start;
   min-width: 25vw;
+  padding-left: 5%;
+  padding-right: 5%;
+  gap:2rem;
 }
 
 /* .Filter p{
